# mtfmt

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  Makefile  README.md  _config.yml  conanfile.py  mm_fmt.c  mm_fmtimp.c  mm_fmtparse.c  mm_heap.c  mm_string.c  project.toml  refcard.drawio
.github/: dependabot.yml
.github/workflows/: auto-close-issues.yml  build-dylib.yml  build-staticlib.yml  build-wasm.yml  cmake-build.yml  cmsis-pack.yml  codeql.yml  coverage.yml  document.yml  doxygen.yml  eslint.yml  format-checker.yml  keil-pack.yml  make-dylib.yml  make-examples.yml  make-lib.yml  make-wasm.yml  pagebuild.yml  pylint.yml  releases.yml  sanitizer.yml  ssh.yml  tests.yml
_layouts/: default.html
assets/: .gitignore
assets/css/: .gitignore  content.scss  header.scss  style.scss  toc.scss  utils.scss
assets/doxygen/: .gitignore
assets/doxygen/css/: content.scss  footer.scss  style.scss
assets/doxygen/html/: footer.html  header.html
bench/: .gitignore
doc/: README.md
examples/: README.md  example_build_config.c  example_cpp_str.cpp  example_fmt_align.c  example_fmt_array.c  example_fmt_int.c  example_fmt_int_index.c  example_fmt_repl.c
inc/: mm_cfg.h  mm_fmt.h  mm_heap.h  mm_helper.hpp  mm_io.h  mm_iobuff.h  mm_parser.h  mm_parser.hpp  mm_result.h  mm_result.hpp  mm_scan.h  mm_string.h  mm_string.hpp  mm_type.h  mm_type.hpp  mm_typedef.h  mtfmt.h  mtfmt.hpp
src/: mm_cfg.c  mm_fmt.c  mm_fmtimp.c  mm_fmtparse.c  mm_heap.c  mm_into.c  mm_intofp.c  mm_io.c  mm_iobuff.c  mm_match.c  mm_parse.c  mm_parser.c  mm_pattern.c  mm_replace.c  mm_scan.c  mm_string.c  mm_stroper.c  mm_strops.c  win_resource.rc
support/: Doxyfile  WebAssembly.mk  WebAssemblyExport.mk  project.toml
support/themes/common/: .gitignore  config.scss  stylevars.scss
support/themes/doxygen/css/: code.scss  content.scss  footer.scss  header.scss  search.scss  style.scss
support/themes/doxygen/html/: footer.html  header.html
tests/: .gitignore  basic.c  fmt_align.c  fmt_arg.c  fmt_behav.c  fmt_sign.c  fmt_sty.c  helper.h  main.c  main.h  string.c  test_basic.c  test_cimpl_parser.c  test_fmt_align.c  test_fmt_arg.c  test_fmt_array.c  test_fmt_behav.c  test_fmt_chrono.c  test_fmt_escape.c  test_fmt_fixed.c  test_fmt_sign.c  test_fmt_sty.c  test_fmt_type_int.c  test_fmt_type_int_arr.c  test_fmt_type_int_val.c  test_helper.h  test_into_fix.cpp  test_into_fp.cpp  test_into_int.cpp  test_main.c  test_main.h  test_monad.cpp  test_monad_cxx.cpp  test_monad_obj.cpp  test_monad_oper.cpp  test_string.c  test_string_append.cpp  test_string_basic.cpp  test_string_concat.cpp  test_string_cxx.cpp  (+8 more)
www/: .eslintrc.yml  .gitignore  .prettierrc.yml  .stylelintrc.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
www/src/: app.d.ts  app.html  index.ts
www/src/lib/: github_api.ts  local_storager.ts
www/src/lib/c/: Button.svelte  Editor.svelte  Footer.svelte  Header.svelte  Markdown.svelte  Monaco.svelte  NavBar.svelte  OnlineDemo.svelte  Picker.svelte  RadioButtonGroup.svelte  ThemeProvider.svelte  Toggler.svelte  TransText.svelte  Viewer.svelte  markdown_toc.ts  markdown_trans.ts  monaco_wrap.ts  radio_button_group.ts  theme_lang.ts  theme_logic.ts  theme_storager.ts
www/src/lib/fp/: apply.ts  cast.ts  fun.ts  result.ts
www/src/lib/lsp/: index.ts  langtoken.ts
www/src/lib/mtfmt/: index.ts  lib.ts  mtfmt.d.ts  mtfmt.js  scope.ts
www/src/lib/parts/: Caption.svelte  FeaturesBlock.svelte  Footer.svelte  Header.svelte  InstallSelector.svelte  OnlineDemo.svelte  features_block.ts  install_selector.ts
www/src/lib/tocmake/: index.ts
www/src/mtfmt/: lib.ts  mtfmt.d.ts  mtfmt.js
www/src/routes/: +layout.svelte  +layout.ts  +page.svelte  Editor.svelte  Header.svelte  PreViewer.svelte  Viewer.svelte  style.scss
www/src/routes/doc/: +page.svelte
www/src/routes/faq/: +page.svelte
www/src/routes/start/: +page.svelte
www/src/texts/: DOCUMENT.md  HOMEPAGE.md  QUICKSTART.md  brief.txt  download.json  example.c  features.json  github_api.json  install.md  install.txt  seealso.json  try.txt
www/src/texts/en/: DOCUMENT.md  FAQ.md  HOMEPAGE.md  QUICKSTART.md
www/src/texts/zh/: DOCUMENT.md  FAQ.md  HOMEPAGE.md  QUICKSTART.md
www/src/themes/common/: config.scss  stylevars.scss  themevar.scss
www/src/themes/doxygen/css/: code.scss  content.scss  header.scss  search.scss  style.scss
www/src/themes/webpages/: contentpage.scss  markdown.scss  pages.scss  style.scss  syntaxhighlight-0.scss  syntaxhighlight-c.scss  syntaxhighlight.scss
www/static/: .gitignore  index.html
www/wasm/: Makefile  export.mk  wrapper.c
zipack/: .gitignore  README.md  __main__.py  action.py  app.py  deps.py  pack.py  pattern.py  pdscfile.py  project.py  requirements.txt
